crates/analyzer/tests/snapshots/errors__ctx_missing_event.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `HelloWorld` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/ctx_missing_event.fe:9:14
  │
9 │         emit HelloWorld(message: "hello world")
  │              ^^^^^^^^^^ ---------------------- supplied 1 argument
  │              │           
  │              expects 2 arguments

error: argument label mismatch
  ┌─ compile_errors/ctx_missing_event.fe:9:25
  │
9 │         emit HelloWorld(message: "hello world")
  │                         ^^^^^^^ expected `ctx`
  │
  = Note: arguments must be provided in order.

error: incorrect type for `HelloWorld` argument `ctx`
  ┌─ compile_errors/ctx_missing_event.fe:9:34
  │
9 │         emit HelloWorld(message: "hello world")
  │                                  ^^^^^^^^^^^^^ this has type `String<11>`; expected type `Context`


